# facefull-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.cmd  build.sh
examples/qt5webkit/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.qrc
examples/ui/: window.html
examples/ui/src/: app.js
examples/web_bridge/: CMakeLists.txt  main.cpp
examples/wxwidgets/: CMakeLists.txt  frame.cpp  frame.h  main.cpp  main.h
include/facefull/bridge/: interface.h  qt5webkit.hpp  web.hpp  wx.hpp
src/: interface.cpp
